--- a/kirjasto-frontend/package.json
+++ b/kirjasto-frontend/package.json
@@ -7,7 +7,7 @@
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "react": "^16.8.6",
-    "react-apollo": "^3.1.3",
+    "react-apollo": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
