--- a/kirjasto/package.json
+++ b/kirjasto/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.9.7",
-    "graphql": "^14.5.8"
+    "dotenv": "^8.2.0",
+    "graphql": "^14.5.8",
+    "mongoose": "^5.7.12",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
