--- a/kirjasto/package.json
+++ b/kirjasto/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^2.9.7",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "mongoose-unique-validator": "^2.0.3"
   },
