--- a/kirjasto-frontend/package.json
+++ b/kirjasto-frontend/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.13",
     "apollo-boost": "^0.4.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
     "graphql": "^14.5.8",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
